--- a/my_program.dSYM/Contents/Resources/Relocations/aarch64/my_program.yml
+++ b/my_program.dSYM/Contents/Resources/Relocations/aarch64/my_program.yml
@@ -2,11 +2,11 @@
 triple:          'arm64-apple-darwin'
 binary-path:     my_program
 relocations:
-  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _print_f, symObjAddr: 0x0, symBinAddr: 0x100003CC4, symSize: 0x180 }
-  - { offsetInCU: 0x41, offset: 0x41, size: 0x8, addend: 0x0, symName: _print_f, symObjAddr: 0x0, symBinAddr: 0x100003CC4, symSize: 0x180 }
-  - { offsetInCU: 0xB0, offset: 0xB0, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x180, symBinAddr: 0x100003E44, symSize: 0x48 }
-  - { offsetInCU: 0x26, offset: 0x134, size: 0x8, addend: 0x0, symName: _format_d, symObjAddr: 0x0, symBinAddr: 0x100003E8C, symSize: 0x84 }
-  - { offsetInCU: 0x41, offset: 0x14F, size: 0x8, addend: 0x0, symName: _format_d, symObjAddr: 0x0, symBinAddr: 0x100003E8C, symSize: 0x84 }
-  - { offsetInCU: 0x26, offset: 0x1F5, size: 0x8, addend: 0x0, symName: _format_s, symObjAddr: 0x0, symBinAddr: 0x100003F10, symSize: 0x5C }
-  - { offsetInCU: 0x33, offset: 0x202, size: 0x8, addend: 0x0, symName: _format_s, symObjAddr: 0x0, symBinAddr: 0x100003F10, symSize: 0x5C }
+  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _print_f, symObjAddr: 0x0, symBinAddr: 0x10000397C, symSize: 0x374 }
+  - { offsetInCU: 0x41, offset: 0x41, size: 0x8, addend: 0x0, symName: _print_f, symObjAddr: 0x0, symBinAddr: 0x10000397C, symSize: 0x374 }
+  - { offsetInCU: 0xF6, offset: 0xF6, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x374, symBinAddr: 0x100003CF0, symSize: 0xD4 }
+  - { offsetInCU: 0x26, offset: 0x1A3, size: 0x8, addend: 0x0, symName: _print_integer, symObjAddr: 0x0, symBinAddr: 0x100003DC4, symSize: 0xD0 }
+  - { offsetInCU: 0x41, offset: 0x1BE, size: 0x8, addend: 0x0, symName: _print_integer, symObjAddr: 0x0, symBinAddr: 0x100003DC4, symSize: 0xD0 }
+  - { offsetInCU: 0x26, offset: 0x257, size: 0x8, addend: 0x0, symName: _print_buffer, symObjAddr: 0x0, symBinAddr: 0x100003E94, symSize: 0x8C }
+  - { offsetInCU: 0x33, offset: 0x264, size: 0x8, addend: 0x0, symName: _print_buffer, symObjAddr: 0x0, symBinAddr: 0x100003E94, symSize: 0x8C }
 ...
