--- a/my_program.dSYM/Contents/Resources/Relocations/aarch64/my_program.yml
+++ b/my_program.dSYM/Contents/Resources/Relocations/aarch64/my_program.yml
@@ -2,9 +2,9 @@
 triple:          'arm64-apple-darwin'
 binary-path:     my_program
 relocations:
-  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _print_f, symObjAddr: 0x0, symBinAddr: 0x100003930, symSize: 0x324 }
-  - { offsetInCU: 0x41, offset: 0x41, size: 0x8, addend: 0x0, symName: _print_f, symObjAddr: 0x0, symBinAddr: 0x100003930, symSize: 0x324 }
-  - { offsetInCU: 0xE2, offset: 0xE2, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x324, symBinAddr: 0x100003C54, symSize: 0xD4 }
+  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _print_f, symObjAddr: 0x0, symBinAddr: 0x10000389C, symSize: 0x324 }
+  - { offsetInCU: 0x41, offset: 0x41, size: 0x8, addend: 0x0, symName: _print_f, symObjAddr: 0x0, symBinAddr: 0x10000389C, symSize: 0x324 }
+  - { offsetInCU: 0xE2, offset: 0xE2, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x324, symBinAddr: 0x100003BC0, symSize: 0x168 }
   - { offsetInCU: 0x26, offset: 0x18F, size: 0x8, addend: 0x0, symName: _print_integer, symObjAddr: 0x0, symBinAddr: 0x100003D28, symSize: 0xD0 }
   - { offsetInCU: 0x41, offset: 0x1AA, size: 0x8, addend: 0x0, symName: _print_integer, symObjAddr: 0x0, symBinAddr: 0x100003D28, symSize: 0xD0 }
   - { offsetInCU: 0x26, offset: 0x243, size: 0x8, addend: 0x0, symName: _print_buffer, symObjAddr: 0x0, symBinAddr: 0x100003DF8, symSize: 0x8C }
